<?xml version="1.0"?>
<package format="2">

  <name>pal_wbc_tutorials</name>
  <version>0.0.6</version>
  <description>The pal_wbc_tutorials package</description>
  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tomé</maintainer>

  <license>LGPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pal_wbc_controller</depend>
  <depend>pal_wbc_utils</depend>
  <depend>pluginlib</depend>
  <depend>joint_state_controller</depend>
  <depend>roscpp</depend>

  <exec_depend>rrbot_description</exec_depend>
  <exec_depend>rrbot_controllers</exec_depend>
  <exec_depend>pal_kinematic_simulator</exec_depend>

  <test_depend>xacro</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <pal_wbc_controller plugin="${prefix}/pal_wbc_tutorials_plugins.xml" />
  </export>
</package>
